--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,13 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "2"
 tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["json"] }
+regex = "1"
+glob = "0.3"
+walkdir = "2"
+termcolor = "1"
+crossterm = "0.28"
+
+[lints.clippy]
+pedantic = "warn"
+
