--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nya-code"
+name = "nyan-code"
 version = "0.1.0"
 edition = "2024"
 
@@ -20,5 +20,14 @@ futures = "0.3"
 async-stream = "0.3"
 
 [lints.clippy]
-pedantic = "warn"
+pedantic = "deny"
 
+module_name_repetitions = "deny"
+missing_errors_doc = "deny"
+must_use_candidate = "deny"
+mod_module_files = "deny"
+
+indexing_slicing = "deny"
+panic = "deny"
+unwrap_used = "deny"
+expect_used = "deny"
