--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,21 @@ clap = { version = "4", features = ["derive"] }
 futures = "0.3"
 async-stream = "0.3"
 
+[lints.rust]
+missing_docs = "deny"
+unused_crate_dependencies = "deny"
+unused_extern_crates = "deny"
+
+[lints.rustdoc]
+broken_intra_doc_links = "deny"
+private_doc_tests = "deny"
+invalid_html_tags = "deny"
+bare_urls = "deny"
+
 [lints.clippy]
 pedantic = "deny"
+
+missing_docs_in_private_items = "deny"
 
 module_name_repetitions = "deny"
 missing_errors_doc = "deny"
