--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,9 @@ name = "nyan-code"
 version.workspace = true
 edition.workspace = true
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 anyhow.workspace = true
 serde.workspace = true
@@ -16,4 +19,3 @@ walkdir.workspace = true
 clap.workspace = true
 futures.workspace = true
 async-stream.workspace = true
-nyan-code-tui = { path = "../tui" }
